<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:text="@string/prompt_email"
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:padding="20dp"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email_login" />

    <TextView
        android:text="@string/prompt_password"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_login"
        android:padding="20dp"

        />

    <Button
        android:text="@string/action_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:padding="20dp"

        />

    <TextView
        android:text="@string/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_prompt"
        android:clickable="true"
        android:padding="20dp"

        />
</LinearLayout>