<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:paddingRight="10dp"
                    android:text="@string/prompt_event_pic" />

                <Button
                    android:id="@+id/upload_pic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.57"
                    android:text="@string/prompt_upload" />
            </LinearLayout>
            />

            <ImageView
                android:id="@+id/preview_pic"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:visibility="gone" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_age_restriction" />

            <RadioGroup
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yes_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/no_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/prompt_invite_only"

                />

            <RadioGroup
                android:id="@+id/invite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yes_invite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"

                    />

                <RadioButton
                    android:id="@+id/no_invite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_free" />

            <RadioGroup
                android:id="@+id/free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >

                <RadioButton
                    android:id="@+id/yes_free"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"

                    />

                <RadioButton
                    android:id="@+id/no_free"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>

            <TextView
                android:id="@+id/ticket_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_ticket_price"
                android:visibility="gone"

                />

            <EditText
                android:id="@+id/ticket_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_manage_tickets"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/yes_manage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"

                    />

                <RadioButton
                    android:id="@+id/no_manage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>


            <Button
                android:id="@+id/post_event_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/post_event"

                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>