<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    >

    <TextView
        android:id="@+id/email_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/prompt_email"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/email_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_textView"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:id="@+id/first_name_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_sign_up"
        android:text="@string/prompt_first_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/first_name_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name_textview"
        android:inputType="text"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/last_name_textview"
        android:text="@string/prompt_last_name"
        android:layout_below="@+id/first_name_sign_up"
        android:textAppearance="?android:attr/textAppearanceLarge"

        />
    <EditText
        android:id="@+id/last_name_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name_textview"
        android:inputType="text"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_textview"
        android:text="@string/prompt_password"
        android:layout_below="@+id/last_name_sign_up"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />
    <EditText
        android:id="@+id/password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_textview"
        android:inputType="textPassword"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_password_textview"
        android:text="@string/prompt_password_confirmation"
        android:layout_below="@+id/password_sign_up"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />
    <EditText
        android:id="@+id/confirm_password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password_textview"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_sign_up"
        android:layout_below="@+id/confirm_password_sign_up"
        android:text="@string/action_sign_up"
        android:padding="20dp"
        />



</RelativeLayout>

</ScrollView>